# john

./: .gitignore
android/android_gradle_genlib/: Readme.md  settings.gradle
android/android_gradle_genlib/app/: build.gradle
android/android_gradle_genlib/app/src/main/: AndroidManifest.xml
android/cmake_cross/: CMakeLists.txt  Readme.md  android.env.cmake
android/ndk/: Android.mk  Application.mk  Readme.md  test.cpp
others/: luajit_build_ios.sh
